--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
         <div class="wrapper about__container">
             <h2 class="about__title">About Me</h2>
             <p class="about__text">I am an engineer in control and automation graduate of the National Institute
-                Polythecnic. I am 26, Mexican and have been fascinated by technology and web development. So by the time I
+                Polythecnic. I am 26, Mexican and have been fascinated by technology and web development. So by the time
+                I
                 discovered this incredible world, I wanted to become a web developer. I consider myself a
                 well-organized, self-taught and responsible individual who enjoys learning new things on a daily basis.
             </p>
@@ -129,30 +130,6 @@
             </div>
             <div class="skill">
                 <p class="skill__description skill__description--figma">Figma</p>
-            </div>
-        </div>
-    </section>
-
-    <section class="wrapper soft-skills" id="soft-skills">
-        <h2 class="soft-skills__title">Soft Skills</h2>
-        <div class="soft-skills__container">
-            <div class="soft-skill">
-                <p class="soft-skill__description">Self-taught</p>
-            </div>
-            <div class="soft-skill">
-                <p class="soft-skill__description">Goal-setting</p>
-            </div>
-            <div class="soft-skill">
-                <p class="soft-skill__description">Problem-solving</p>
-            </div>
-            <div class="soft-skill">
-                <p class="soft-skill__description">Curiosity</p>
-            </div>
-            <div class="soft-skill">
-                <p class="soft-skill__description">Flexibility</p>
-            </div>
-            <div class="soft-skill">
-                <p class="soft-skill__description">Discipline</p>
             </div>
         </div>
     </section>
@@ -201,7 +178,8 @@
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">Business Agility</h3>
-                        <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam  & Oracle
+                        <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam
+                            & Oracle
                         </p>
                         <a href="https://app.aluracursos.com/degree/certificate/01fb4063-74e6-4e61-b0b8-08f4513ff528"
                             class="pill pill--secondary" target="_blank">Certificate</a>
@@ -213,7 +191,8 @@
                     </div>
                     <div class="education-card__description">
                         <h3 class="education-card__topic">React - FrontEnd</h3>
-                        <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam & Oracle
+                        <p class="education-card__academy"><span class="education-card__year">2023 - </span> Alura Latam
+                            & Oracle
                         </p>
                         <a href="https://app.aluracursos.com/user/a-posas/degree-react-grupo5-one-15576/certificate"
                             class="pill pill--secondary" target="_blank">Certificate</a>
@@ -239,6 +218,55 @@
     <section class="wrapper experiences" id="projects">
         <h2 class="experiences__title">Projects</h2>
         <div class="experiences__container">
+            <div class="experience">
+                <div class="experience__image">
+                    <img src="src/images/vc-suministros-min.png" alt="vc_suministros app">
+                </div>
+                <div class="experience__content">
+                    <h3 class="experience__title">VC Suministros</h3>
+                    <div class="experience__description">
+                        <p class="experience__technology">React</p>
+                        <p class="experience__technology">Tailwind</p>
+                        <p class="experience__technology">Material UI</p>
+                        <p class="experience__technology">React Router</p>
+                        <p class="experience__technology">Formik</p>
+                        <p class="experience__technology">Yup</p>
+                        <p class="experience__technology">Swiper</p>
+                        <p class="experience__technology">Express</p>
+                        <p class="experience__technology">Multer</p>
+                        <p class="experience__technology">Express Validator</p>
+                        <p class="experience__technology">Sequelize</p>
+                        <p class="experience__technology">PostgreSQL</p>
+                        <p class="experience__technology">Json Web Token</p>
+                    </div>
+                    <!-- <a target="_blank" href="https://github.com/EduardoPosas/alura-geek-vanillajs.git"
+                        class="pill pill--secondary">Repository</a> -->
+                    <a target="_blank"
+                        href="https://vite-react-pinturas-carabes-mam8nueis-alexander-pozas-projects.vercel.app/"
+                        class="pill pill--primary">Preview</a>
+                </div>
+            </div><!--experience-->
+            <div class="experience">
+                <div class="experience__image">
+                    <img src="src/images/alura-geek-min.png" alt="alura geek">
+                </div>
+                <div class="experience__content">
+                    <h3 class="experience__title">Alura Geek</h3>
+                    <div class="experience__description">
+                        <p class="experience__technology">HTML</p>
+                        <p class="experience__technology">Javascript</p>
+                        <p class="experience__technology">Talwind Css</p>
+                        <p class="experience__technology">Vite</p>
+                        <p class="experience__technology">Rest API</p>
+                        <p class="experience__technology">Json Server</p>
+                        <p class="experience__technology">Session Storage</p>
+                    </div>
+                    <a target="_blank" href="https://github.com/EduardoPosas/alura-geek-vanillajs.git"
+                        class="pill pill--secondary">Repository</a>
+                    <a target="_blank" href="https://eduardoposas.github.io/alura-geek-vanillajs/"
+                        class="pill pill--primary">Demo</a>
+                </div>
+            </div><!--experience-->
             <div class="experience">
                 <div class="experience__image">
                     <img src="src/images/seguimiento-veterinaria-min.png" alt="veterinary control web page">
@@ -278,27 +306,7 @@
                         class="pill pill--primary">Demo</a>
                 </div>
             </div><!--experience-->
-            <div class="experience">
-                <div class="experience__image">
-                    <img src="src/images/alura-geek-min.png" alt="alura geek">
-                </div>
-                <div class="experience__content">
-                    <h3 class="experience__title">Ecommerce</h3>
-                    <div class="experience__description">
-                        <p class="experience__technology">HTML</p>
-                        <p class="experience__technology">Javascript</p>
-                        <p class="experience__technology">Talwind Css</p>
-                        <p class="experience__technology">Vite</p>
-                        <p class="experience__technology">Rest API</p>
-                        <p class="experience__technology">Json Server</p>
-                        <p class="experience__technology">Session Storage</p>
-                    </div>
-                    <a target="_blank" href="https://github.com/EduardoPosas/alura-geek-vanillajs.git"
-                        class="pill pill--secondary">Repository</a>
-                    <a target="_blank" href="https://eduardoposas.github.io/alura-geek-vanillajs/"
-                        class="pill pill--primary">Demo</a>
-                </div>
-            </div><!--experience-->
+
             <div class="experience">
                 <div class="experience__image">
                     <img src="src/images/festival-musica-min.png" alt="music festival web page">
@@ -333,7 +341,6 @@
                         class="pill pill--primary">Demo</a>
                 </div>
             </div><!--experience-->
-
             <div class="experience">
                 <div class="experience__image">
                     <img src="src/images/encriptador-texto-min.png" alt="text econder web page">
@@ -354,7 +361,7 @@
         </div>
     </section>
 
-    <section class="contact diagonal-shape" id="contact">
+    <!-- <section class="contact diagonal-shape" id="contact">
         <div class="wrapper">
             <div class="contact__container">
                 <div contact__form>
@@ -400,10 +407,10 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <footer class="footer">
-        <p class="footer__description">Developed by <span>Alexander Pozas &copy;</span> All rights reserved</p>
+        <p class="footer__description">Developed by <span>Alexander Pozas</p>
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
