--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alexander Pozas | Portfolio </title>
+    <title>Alexander Posas | Portfolio </title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,900&display=swap"
@@ -70,7 +70,7 @@
             <img class="perfil__image" src="src/images/yo.jpg" alt="me">
             <div class="perfil__information">
                 <div class="perfil__data">
-                    <h1 class="perfil__name">Hi! I am Alexander Pozas</h1>
+                    <h1 class="perfil__name">Hi! I am Alexander Posas</h1>
                     <p class="perfil__occupation">FrontEnd Developer</p>
                 </div>
                 <div class="social-media">
@@ -410,7 +410,7 @@
     </section> -->
 
     <footer class="footer">
-        <p class="footer__description">Developed by <span>Alexander Pozas</p>
+        <p class="footer__description">Developed by <span>Alexander Posas</p>
     </footer>
 
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
