--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <!-- <a target="_blank" href="https://github.com/EduardoPosas/alura-geek-vanillajs.git"
                         class="pill pill--secondary">Repository</a> -->
                     <a target="_blank"
-                        href="https://vite-react-pinturas-carabes.vercel.app/productos"
+                        href="https://vite-react-pinturas-carabes.vercel.app/"
                         class="pill pill--primary">Preview</a>
                 </div>
             </div><!--experience-->
